# ris-pdf-printservice

./: .gitignore  .talismanrc  .trivyignore  CONTRIBUTING.md  Dockerfile  README.md  lefthook.yml  opencode.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: backend-jobs.yml  bump-chainguard-image.yml  create-docker-image-job.yml  dependabot-automerge.yml  deploy-staging-job.yml  pipeline.yml  push-docker-image-job.yml
doc/: PDF-A-conformance.md  accessibility.md  how-to-use-weasyprint-with-tailwind.md
doc/adr/: 0001-weasyprint.md  0002-pdf-variant.md
example/tailwind-css/: README.md  package-lock.json  package.json  postcss.config.ts  tsconfig.json  vite.config.ts
example/tailwind-css/src/: index.ts  legislation.css
src/: main.py  styles.py
static/.well-known/: security.txt
tests/: test_main.py
