[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = "src"

[project]
name = "my-fastapi-weasyprint-app"
version = "0.1.0"
requires-python = ">=3.13"
license = "GPL-3.0"
dependencies = [
  "black>=25.1.0",
  "fastapi[standard]==0.123.4",
  "flake8>=7.3.0",
  "weasyprint==68.0",
  "pikepdf==10.0.2",
  "python-multipart==0.0.20",
  "prometheus-fastapi-instrumentator>=7.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "licensecheck==2025.1.0",
    "pytest-html==4.1.1"
]

[tool.licensecheck]
ignore_packages = [
    "mypy-extensions" # package is missing the license information but is licensed under MIT
]
ignore_licenses = [
    "MPL-2.0", # we allow MPL-2.0
    "GNU GENERAL PUBLIC LICENSE V2", # It's just not parsed correctly by licensecheck
    "GNU LESSER GENERAL PUBLIC LICENSE V2" # It's just not parsed correctly by licensecheck
]
