[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = "src"

[project]
name = "my-fastapi-weasyprint-app"
version = "0.1.0"
requires-python = ">=3.13"
license = "GPL-3.0"
dependencies = [
  "black>=25.1.0",
  "fastapi[standard]==0.135.2",
  "flake8>=7.3.0",
  "weasyprint==68.1",
  "pikepdf==10.5.1",
  "python-multipart==0.0.26",
  "prometheus-fastapi-instrumentator>=7.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "licensecheck==2025.1.0",
    "pytest-html==4.2.0"
]

[tool.licensecheck]
ignore_packages = [
    "mypy-extensions" # package is missing the license information but is licensed under MIT
]
ignore_licenses = [
    "MPL-2.0", # we allow MPL-2.0
    "GNU GENERAL PUBLIC LICENSE V2", # It's just not parsed correctly by licensecheck
    "GNU LESSER GENERAL PUBLIC LICENSE V2" # It's just not parsed correctly by licensecheck
]
