[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = "src"

[project]
name = "my-fastapi-weasyprint-app"
version = "0.1.0"
requires-python = ">=3.13"
license = "GPL-3.0"
dependencies = [
  "black>=26.5.1",
  "fastapi[standard]==0.137.1",
  "flake8>=7.3.0",
  "weasyprint==69.0",
  "pikepdf==10.8.0",
  "python-multipart==0.0.32",
  "prometheus-fastapi-instrumentator>=7.1.0",
  # Fixes CVE-2026-54283, transient dependency of fastapi. Can be removed once fastapi releases a new version with the fix.
  "starlette>=1.3.1",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "licensecheck==2026.0.1",
    "pytest-html==4.2.0"
]

[tool.licensecheck]
ignore_packages = [
    "mypy-extensions" # package is missing the license information but is licensed under MIT
]
ignore_licenses = [
    "MPL-2.0", # we allow MPL-2.0
    "GNU GENERAL PUBLIC LICENSE V2", # It's just not parsed correctly by licensecheck
    "GNU LESSER GENERAL PUBLIC LICENSE V2" # It's just not parsed correctly by licensecheck
]
